syntax = "proto3";

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloResponse);
    rpc GetUserInfo (UserRequest) returns (UserResponse);
    rpc SendMessage (MessageRequest) returns (MessageResponse);
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}

message UserRequest {
    int32 userId = 1;
}

message UserResponse {
    int32 userId = 1;
    string username = 2;
    string email = 3;
    string role = 4;
}

message MessageRequest {
    string recipient = 1;
    string content = 2;
}

message MessageResponse {
    bool success = 1;
    string messageId = 2;
    string timestamp = 3;
}